--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -15,7 +15,7 @@
     <form action = "{{ url_for('predict')}}">
   <div class="form-group">
     <label for="exampleFormControlInput1">Age</label>
-      <input name = "age" type="number" id="exampleFormControlInput1" name="quantity" min="15" max="100"><br>
+      <input name = "age" type="number" id="exampleFormControlInput1" name="quantity" value = "18" min="18" max="99"><br>
   </div>
   <div class="form-group">
     <label for="exampleFormControlSelect1">Example select</label>
